--- a/index.html
+++ b/index.html
@@ -1,14 +1,135 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.4.4/phaser.min.js"></script>
-    
+    <title>p2.js and Pixi.js example</title>
+    <meta charset="utf-8">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/3.0.8/pixi.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p2.js/0.7.1/p2.min.js"></script>
   </head>
-
   <body>
-    <script src="script.js"></script>
-  </body>
 
+    <script>
+        var renderer, stage, container, graphics, zoom,
+            world, boxShape, boxBody, planeBody, planeShape,chassisBody;
+
+        init();
+        animate();
+
+        function init(){
+
+            // Init p2.js
+            // Create a dynamic body for the chassis
+	        world = new p2.World({
+                gravity : [0,0]
+            });
+            // Create a dynamic body for the chassis
+            chassisBody = new p2.Body({
+                mass: 1
+            });
+            var boxShape = new p2.Box({ width: 0.2, height: 0.4 });
+            chassisBody.addShape(boxShape);
+            world.addBody(chassisBody);
+            // Create the vehicle
+            vehicle = new p2.TopDownVehicle(chassisBody);
+            // Add one front wheel and one back wheel - we don't actually need four :)
+            frontWheel = vehicle.addWheel({
+                localPosition: [0, 0.5] // front
+            });
+            frontWheel.setSideFriction(10);
+            // Back wheel
+            backWheel = vehicle.addWheel({
+                localPosition: [0, -0.5] // back
+            });
+            backWheel.setSideFriction(10); // Less side friction on back wheel makes it easier to drift
+            vehicle.addToWorld(world);
+
+            // Add a box
+
+            // Add a plane
+            // planeShape = new p2.Plane();
+            // planeBody = new p2.Body({ position:[0,-1] });
+            // planeBody.addShape(planeShape);
+            // world.addBody(planeBody);
+
+            // Pixi.js zoom level
+            zoom = 100;
+
+            // Initialize the stage
+            renderer =  PIXI.autoDetectRenderer(800, 600),
+            stage = new PIXI.Stage(0xFFFFFF);
+
+            // We use a container inside the stage for all our content
+            // This enables us to zoom and translate the content
+            container =     new PIXI.DisplayObjectContainer(),
+            stage.addChild(container);
+
+            // Add the canvas to the DOM
+            document.body.appendChild(renderer.view);
+
+            // Add transform to the container
+            container.position.x =  renderer.width/2; // center at origin
+            container.position.y =  renderer.height/2;
+            container.scale.x =  zoom;  // zoom in
+            container.scale.y = -zoom; // Note: we flip the y axis to make "up" the physics "up"
+
+            // Draw the box.
+            graphics = new PIXI.Graphics();
+            graphics.beginFill(0xff0000);
+            graphics.drawRect(-boxShape.width/2, -boxShape.height/2, boxShape.width, boxShape.height);
+
+            // Add the box to our container
+            container.addChild(graphics);
+
+            var keys = {
+                '37': 0, // left
+                '39': 0, // right
+                '38': 0, // up
+                '40': 0 // down
+            };
+            var maxSteer = Math.PI / 5;
+            window.addEventListener("keydown",function (evt){
+                keys[evt.keyCode] = 1;
+                onInputChange();
+            });
+            window.addEventListener("keyup",function (evt){
+                keys[evt.keyCode] = 0;
+                onInputChange();
+            });
+            function onInputChange(){
+                // Steer value zero means straight forward. Positive is left and negative right.
+                frontWheel.steerValue = maxSteer * (keys[37] - keys[39]);
+                // Engine force forward
+                backWheel.engineForce = keys[38] * 2;
+                backWheel.setBrakeForce(0);
+                if(keys[40]){
+                    if(backWheel.getSpeed() > 0.1){
+                        // Moving forward - add some brake force to slow down
+                        backWheel.setBrakeForce(2);
+                    } else {
+                        // Moving backwards - reverse the engine force
+                        backWheel.setBrakeForce(0);
+                        backWheel.engineForce = -2;
+                    }
+                }
+            }
+        }
+
+        // Animation loop
+        function animate(t){
+            t = t || 0;
+            requestAnimationFrame(animate);
+
+            // Move physics bodies forward in time
+            world.step(1/60);
+
+            // Transfer positions of the physics objects to Pixi.js
+            graphics.position.x = chassisBody.position[0];
+            graphics.position.y = chassisBody.position[1];
+            graphics.rotation =   chassisBody.angle;
+
+            // Render scene
+            renderer.render(stage);
+        }
+    </script>
+</body>
 </html>
