removed reversing and accelerating

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
             });
             // Create a dynamic body for the chassis
             chassisBody = new p2.Body({
-                mass: 1
+                mass: 1,
+                angle: -1.5708,
+                velocity: [15, 0],
             });
-            var boxShape = new p2.Box({ width: 0.2, height: 0.4 });
+            var boxShape = new p2.Box({ width: 0.5, height: 1 });
             chassisBody.addShape(boxShape);
             world.addBody(chassisBody);
             // Create the vehicle
@@ -35,12 +37,12 @@
             frontWheel = vehicle.addWheel({
                 localPosition: [0, 0.5] // front
             });
-            frontWheel.setSideFriction(10);
+            frontWheel.setSideFriction(200);
             // Back wheel
             backWheel = vehicle.addWheel({
                 localPosition: [0, -0.5] // back
             });
-            backWheel.setSideFriction(10); // Less side friction on back wheel makes it easier to drift
+            backWheel.setSideFriction(200); // Less side friction on back wheel makes it easier to drift
             vehicle.addToWorld(world);
 
             // Add a box
@@ -52,7 +54,7 @@
             // world.addBody(planeBody);
 
             // Pixi.js zoom level
-            zoom = 100;
+            zoom = 25;
 
             // Initialize the stage
             renderer =  PIXI.autoDetectRenderer(800, 600),
@@ -67,8 +69,8 @@
             document.body.appendChild(renderer.view);
 
             // Add transform to the container
-            container.position.x =  renderer.width/2; // center at origin
-            container.position.y =  renderer.height/2;
+            container.position.x =  renderer.width/10; // center at origin
+            container.position.y =  renderer.height/10;
             container.scale.x =  zoom;  // zoom in
             container.scale.y = -zoom; // Note: we flip the y axis to make "up" the physics "up"
 
@@ -86,7 +88,7 @@
                 '38': 0, // up
                 '40': 0 // down
             };
-            var maxSteer = Math.PI / 5;
+            var maxSteer = 20000;
             window.addEventListener("keydown",function (evt){
                 keys[evt.keyCode] = 1;
                 onInputChange();
@@ -98,8 +100,6 @@
             function onInputChange(){
                 // Steer value zero means straight forward. Positive is left and negative right.
                 frontWheel.steerValue = maxSteer * (keys[37] - keys[39]);
-                // Engine force forward
-                backWheel.engineForce = keys[38] * 2;
                 backWheel.setBrakeForce(0);
                 if(keys[40]){
                     if(backWheel.getSpeed() > 0.1){
@@ -107,8 +107,7 @@
                         backWheel.setBrakeForce(2);
                     } else {
                         // Moving backwards - reverse the engine force
-                        backWheel.setBrakeForce(0);
-                        backWheel.engineForce = -2;
+                        backWheel.setBrakeForce(2);
                     }
                 }
             }
