cars slow down faster if they're not driven

--- a/index.html
+++ b/index.html
@@ -89,8 +89,6 @@
                         .load(function (loader, resources) {
                             carTexture = resources.car.texture;
                             player = new Car(0,0,0.5,1,-1.5,15,0,2,world,container,PLAYER,stage);
-
-                            cars.push(new Car(1,-5,0.5,1,-1.5,0,0,1,world,container,CAR,stage));
                             animate();
             });
             stage.addChild(container);
@@ -167,6 +165,7 @@
             };
             // console.log(p2.vec2.length(player.chassisBody.velocity))
             if(p2.vec2.length(player.chassisBody.velocity) <= 0.05){
+                player.chassisBody.backWheel.setBrakeForce(2);
                 cars.push(player);
                 player = new Car(0,0,0.5,1,-1.5,15,0,2,world,container,PLAYER,stage);
                 
